force-app/main/default/objects/OpenAI_Event__e/OpenAI_Event__e.object-meta.xml
<CustomObject>
    <description>Used for Pub-Sub model on LWC because the API response can take some time to process</description>
    <label>OpenAI Event</label>
    <pluralLabel>OpenAI Events</pluralLabel>
</CustomObject>