force-app/main/default/objects/OpenAI_Event__e/fields/Chat_Id__c.field-meta.xml
<CustomField>
    <fullName>Chat_Id__c</fullName>
    <description>The Id of a parent chat that has had a response from OpenAI</description>
    <label>Chat Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>