force-app/main/default/objects/OpenAI_Event__e/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether an error occurred during the event</description>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>