force-app/main/default/objects/OpenAI_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Used to identify user who is part of the chat so that pub-sub only refreshes their experience</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>